Fix overflowing images in most places

--- a/_sass/parts/utilities/images.scss
+++ b/_sass/parts/utilities/images.scss
@@ -1,3 +1,6 @@
-img.pixel-art {
-  image-rendering: crisp-edges;
+img {
+    .pixel-art {
+        image-rendering: crisp-edges;
+        max-width: 100%;
+    }
 }
